--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@
       margin-bottom: 2rem;
     }
 
-    h1 {
-      font-size: 2.5rem;
-      color: #595959;
-      margin-bottom: 1rem;
+    p {
+      font-size: 1.125rem;
+      margin-bottom: 2rem;
     }
 
     .email-contact {
@@ -77,7 +76,7 @@
   <!-- Replace with your actual logo file -->
   <img src="dfe-logo.png" alt="Deep Foundation Elements" class="logo fade-in" />
 
-  <h1 class="fade-in delay-1">Coming soon.</h1>
+  <p class="fade-in delay-1">Coming soon.</p>
 
   <!-- Replace with your actual email address -->
   <a href="mailto:eugene@dfelements.com" class="email-contact fade-in delay-2">eugene@dfelements.com</a>
