--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Deep Foundation Elements</title>
+  <title>DFE</title>
   <link rel="icon" href="dfe-favicon.png" type="image/png">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
@@ -57,6 +57,7 @@
 
     p {
       font-size: 1.125rem;
+      color: #595959;
       margin-bottom: 2rem;
     }
 
