--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
 
     p {
       font-size: 1.125rem;
-      color: #595959;
       margin-bottom: 2rem;
+      font-weight: 400;
+      color: #777;
     }
 
     .email-contact {
